--- a/src/app/posts/components/posts/posts.component.css
+++ b/src/app/posts/components/posts/posts.component.css
@@ -3,3 +3,9 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
+@media(max-width: 620px) {
+    .posts-list {
+        justify-content: center;
+    }
+}
